feat: Implement App Monitoring Service and Schedule Management
- Added AppMonitorService to monitor app blocking schedules in the background.
- Enhanced BlockedApp model to include schedule IDs for better management.
- Updated Schedule model to support both string and object formats for time representation.
- Modified AppRepository to sync full blocked app data as JSON to native Android.
- Introduced AppScheduleSelectionScreen for selecting schedules for blocked apps.
- Created ScheduleScreen for managing block schedules with add/edit/delete functionality.
- Implemented ScheduleCard widget for displaying schedule details in a user-friendly manner.
- Integrated service initialization and data synchronization in HomeScreen.
- Updated navigation flow to include schedule management features.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -72,6 +72,13 @@
                 android:resource="@xml/accessibility_service_config" />
         </service>
 
+        <!-- App Monitor Foreground Service -->
+        <service
+            android:name=".services.AppMonitorService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
+
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
