--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
   # State Management
-  provider: ^6.1.2
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.7
 
   # Local Storage
   shared_preferences: ^2.3.3
@@ -44,8 +47,8 @@ dependencies:
   # Charts for Statistics
   fl_chart: ^0.69.2
 
-  # Date/Time handling
-  intl: ^0.19.0
+  # Date/Time handling & Localization
+  intl: ^0.20.2
 
   # UUID for generating unique IDs
   uuid: ^4.5.1
