--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
 
   # Local Storage
   shared_preferences: ^2.3.3
+  sqflite: ^2.3.0
+  path_provider: ^2.1.1
 
   # Charts for Statistics
   fl_chart: ^0.69.2
