feat: Add OEM restriction banner and enhance statistics dashboard
- Implemented OEMRestrictionBanner widget to inform users about potential OEM restrictions affecting usage statistics accuracy.
- Updated PieChartCard to support customizable margins and localized text for usage distribution.
- Introduced TimePeriodFilter widget for selecting time periods with localized labels and icons.
- Enhanced TopAppsListCard to include customizable margins and localized text for top apps.
- Created UsageSummaryCard to display total usage time, app count, and comparison with yesterday.
- Improved StatisticsCubit to handle OEM restrictions and added methods for loading dashboard data for specific time periods.
- Updated StatisticsState to include OEM restriction information and additional dashboard data.
- Modified main.dart to start monitoring and tracking services automatically if permissions are granted.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
         android:label="block_app"
@@ -78,6 +80,31 @@
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="dataSync" />
+
+        <!-- Usage Tracking Foreground Service -->
+        <service
+            android:name=".services.UsageTrackingService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
+
+        <!-- Boot Receiver to auto-start services -->
+        <receiver
+            android:name=".receivers.BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+            </intent-filter>
+        </receiver>
+
+        <!-- Midnight Reset Receiver for daily transitions -->
+        <receiver
+            android:name=".receivers.MidnightResetReceiver"
+            android:enabled="true"
+            android:exported="false" />
 
     </application>
     <!-- Required to query activities that can process text, see:
